# base_docker_python

./: .dockerignore  Readme.md  Readme.rst  pyproject.toml
docker/: Dockerfile
