[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Tomás Lucas <tomaslucas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
pandas = "^1.3.3"
pytest = "^6.2.5"
pytest-regressions = "^2.2.0"
jupyterlab = "^3.1.12"
openpyxl = "^3.0.9"
seaborn = "^0.11.2"
Sphinx = "^4.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
